# internal/routes/expertise/expertise_routes.go
@@ -8,4 +8,5 @@ import (
 
 func RegisterRoutes(public *gin.RouterGroup, handler *expertisehandler.ExpertiseHandler) {
 	public.GET("/expertise/search", handler.Search)
+	public.POST("/expertise", handler.Create)
 }
